# cmake-sandbox

./: .gitignore  .gitmodules  KREADME.md  README.md  final-structure.MD  final-structure.md
01-android/A-generate-lib-inside/: settings.gradle
01-android/A-generate-lib-inside/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
01-android/A-generate-lib-inside/gen-libs/src/main/cpp/: CMakeLists.txt
01-android/A-generate-lib-inside/gen-libs/src/main/cpp/cadd/: CMakeLists.txt
01-android/A-generate-lib-inside/gen-libs/src/main/cpp/cadd/src/: cadd.c
01-android/A-generate-lib-inside/gen-libs/src/main/cpp/csubtract/: CMakeLists.txt
01-android/A-generate-lib-inside/gen-libs/src/main/cpp/csubtract/src/: csubtract.c  csubtract.h
01-android/B-generate-lib-outside/: README.md  build.sh
01-android/C-multiple-architectures/: CMakeLists.txt  README.md
01-android/C-multiple-architectures/examples/android/app/src/main/cpp/: CMakeLists.txt
01-android/D-shared-library/: CMakeLists.txt  README.md  build.sh
01-android/D-shared-library/examples/: CMakeLists.txt
01-android/D-shared-library/examples/android/app/: build.gradle
01-android/D-shared-library/examples/android/app/src/main/cpp/: CMakeLists.txt
01-transitive-dependencies/main_module/: CMakeLists.txt  main.cpp
02-macos/A-simple-library/: build.sh
02-macos/A-static-library/: CMakeLists.txt
02-macos/A-static-library/examples/: calculator.c
02-macos/A-static-library/include/: multiply.h
02-macos/A-static-library/src/: add.c
02-macos/B-shared-library/: CMakeLists.txt  README.md  build.sh
02-macos/B-shared-library/distribution/macos/: libcalc.dylib
02-macos/B-shared-library/examples/: CMakeLists.txt
02-macos/B-shared-library/examples/macos/: CMakeLists.txt  calculator
02-nested-transitive/: README.md
02-nested-transitive/main_module/: main.cpp
02-nested-transitive/multiply_module/: CMakeLists.txt
02-nested-transitive/multiply_module/add_submodule/: CMakeLists.txt
02-nested-transitive/subtract_module/: CMakeLists.txt
03-cross-platform/: CMakeLists.txt  build.sh
03-cross-platform/distribution/macos/: libcalc.dylib
03-cross-platform/examples/: CMakeLists.txt
03-cross-platform/examples/macos/: calculator
03-import-from-faraway/: README.md
03-linux/A-shared-library/: CMakeLists.txt  build.sh
03-linux/A-simple-library/: CMakeLists.txt  Dockerfile  README.md
03-linux/A-static-library/: CMakeLists.txt  README.md
03-linux/B-shared-library/: README.md
03-linux/B-static-library/: Dockerfile
03-linux/B-static-library/examples/linux/: CMakeLists.txt
03-linux/include/: add.h
04-cross-platform/: CMakeLists.txt  Dockerfile  README.md  build.sh
04-cross-platform/examples/: CMakeLists.txt
04-cross-platform/examples/linux/: CMakeLists.txt
04-ios/A-simple-library/: README.md  build.sh
04-ios/A-static-library/: CMakeLists.txt  README.md
04-ios/A-static-library/examples/ios/ios/: AppDelegate.h  main.m
04-ios/A-static-library/examples/ios/ios.xcodeproj/: project.pbxproj
04-ios/B-shared-library/: CMakeLists.txt  README.md  build.sh
04-ios/C-fat-library/: CMakeLists.txt  build.sh
04-static-and-share-library/: README.md
05-build-other-languages/A-java/: CMakeLists.txt
05-build-other-languages/A-java-simple/: README.md
05-build-other-languages/B-java-with-library/: CMakeLists.txt  README.md
05-cross-platform/: CMakeLists.txt  build.sh
06-common-core/: build.sh
06-common-core/android/: .gitignore
06-common-core/native/: conanfile.py
06-dependency-manager/: README.md
06-dependency-manager/B-nexus-caching/: CMakeLists.txt  README.md  build_and_upload_to_cache.sh
06-dependency-manager/C-nexus-caching-custom-package/: CMakeLists.txt  README.md  main.cpp
07-android-test/android/app/src/main/cpp/: CMakeLists.txt
07-android-test/native/: conanfile.py
07-conan-package-manager/: README.md
07-conan-package-manager/C-integration-example/: conanfile.py
07-conan-package-manager/C-integration-example/calc/: CMakeLists.txt
07-conan-package-manager/C-integration-example/examples/android/app/src/main/cpp/: CMakeLists.txt
08-android-library/: README.md
08-android-library/android/: settings.gradle
09-ios-library/A-static-library/: README.md
K1-transitive-dependencies/: CMakeLists.txt  README.md
K1-transitive-dependencies/main_module/: main.cpp
K1-transitive-dependencies/multiply_module/: CMakeLists.txt
K1-transitive-dependencies/subtract_module/: CMakeLists.txt
K2-nested-transitive/: CMakeLists.txt  README.md
K2-nested-transitive/main_module/: CMakeLists.txt  main.cpp
K3-import-from-faraway/: README.md
K3-import-from-faraway/some/nested/project/main_module/: CMakeLists.txt  main.cpp
K4-static-and-share-library/: CMakeLists.txt  README.md
K4-static-and-share-library/add_module/: CMakeLists.txt
K4-static-and-share-library/main_module/: CMakeLists.txt  main.cpp
K4-static-and-share-library/subtract_module/: CMakeLists.txt
K5-build-other-languages/: README.md
K5-build-other-languages/A-java-simple/: README.md
K5-build-other-languages/B-java-with-library/: README.md
K5-build-other-languages/B-java-with-library/main_module/: CMakeLists.txt
K6-dependency-manager/: README.md
K6-dependency-manager/A-open-from-source/: CMakeLists.txt  README.md  main.cpp
K6-dependency-manager/B-nexus-caching/: CMakeLists.txt  README.md  build_and_upload_to_cache.sh
K6-dependency-manager/C-nexus-caching-custom-package/: README.md  build_and_upload_to_cache.sh  cached_build.sh  update_project.sh
K6-dependency-manager/D-nexus-different-builds/: README.md
K7-conan-package-manager/: README.md
K7-conan-package-manager/C-integration-example/: README.md  conanfile.py
K7-conan-package-manager/C-integration-example/calc/: CMakeLists.txt  build.sh
K8-cmocka-test/: CMakeLists.txt  README.md  conanfile.py
K8-cmocka-test/calc/: CMakeLists.txt  DartConfiguration.tcl
K8-cmocka-test/calc/tests/: CMakeLists.txt  test-sum.c
K8-cmocka-test/tests/: CMakeLists.txt  test-sum.c
add_module/src/: add.cpp
multiply_module/: CMakeLists.txt
(+102 files in other folders)
